# MB_TOg_groepje10

./: .gitignore  CMakeLists.txt  Main.cpp  MultiTapeTuringMachine.cpp  MultiTapeTuringMachine.h  ProjectVoorstelTOG.tex  README.md  Tape.cpp  Tape.h  TransitionFunction.cpp  TransitionFunction.h  Utils.h  main.cpp
Headers/: CFG.h  CYKParser.h  EarleyParser.h  ExpressionCalculator.h  Logger.h  MultiTapeTuringMachine.h  PDA.h  SingleTapeTransformer.h  Tape.h  TransitionFunction.h  Utils.h
InputFiles/: CFG.txt  expressionCFG.json  expressionCNF.json  testCFG.json
InputFiles/TransitionFiles/: additionMTM.json  additionMTM_OneTape.json  divisionMTM.json  divisionMTM_OneTape.json  multiplicationMTM.json  powerMTM.json  subtractionMTM.json
Interface/: ArithmeticDialog.cpp  ArithmeticDialog.h  MainWindow.cpp  MainWindow.h  OutputViewer.cpp  OutputViewer.h  TuringSimulationDialog.cpp  TuringSimulationDialog.h
OutputFiles/: MTMOutput.html  MTMOutput.json  MTMOutput.txt  calculation.txt
Parsers/: CYKParser.cpp  EarleyParser.cpp  ParseTree.cpp  ParseTree.h
Presentations/: Contract Turing Tutor.xlsx  ProjectVoorstelTOG.tex
Sources/: CFG.cpp  CYKParser.cpp  EarleyParser.cpp  ExpressionCalculator.cpp  Logger.cpp  MultiTapeTuringMachine.cpp  PDA.cpp  SingleTapeTransformer.cpp  Tape.cpp  TransitionFunction.cpp
Tests/: ExpressionCalculatorTests.cpp  MultiTapeTuringMachineTests.cpp  ParserTests.cpp  TapeTests.cpp  TransitionFunctionTests.cpp  mainTest.cpp
Tests/TestInputFiles/: ExampleTestCFG_1.json  ExampleTestCFG_2.json  ExampleTestCFG_3.json
libs/nlohmann/: json.hpp
